# sudoku

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.MD  win32.rc
app/: argmod.c  game.c  game_scenes.h  helper.h  ogl.c  res.c  states.c  strings.h  strings_en.c  strings_id.c  sudoku.h  termio.c  vtermio.c  window.c
app/scenes/: board.c  end.c  menu.c  mkboard.c  mkboard.h  splash.c
